--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ test-output/
 .springBeans
 .vscode
 .venv
+fx/.venv
+tts_env
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
